moving to windows REMEMBER WRONG settings

--- a/RC_Ard_v2/platformio.ini
+++ b/RC_Ard_v2/platformio.ini
@@ -10,9 +10,10 @@
 
 [env:RC_Ard_v2]
 platform = atmelavr
-board = sleepypi
+board = fio
 framework = arduino
-upload_port = /dev/ttyS0
+; on rpi use this: upload_port = /dev/ttyS0
+; upload_port = COM3
 
 lib_deps =
      Time@1.5
