Memory optimizations due to too many segfaults

--- a/RC_Ard_v2/platformio.ini
+++ b/RC_Ard_v2/platformio.ini
@@ -20,4 +20,4 @@ lib_deps =
      Low-Power@1.6
      https://github.com/SpellFoundry/SleepyPi2.git#def9d3828ee1a777727d350588887a929b8b77a6
      https://github.com/SpellFoundry/PCF8523.git#bd81fce78a374e5a444d9017a2dc922e40ee0c72
-     arduino-fsm@2.2.0
+     ; arduino-fsm@2.2.0
